tests/compilation_tests/04_fail_fn_parameters.stderr
error[E0308]: arguments to this function are incorrect
  --> tests/compilation_tests/04_fail_fn_parameters.rs:28:5
   |
28 |     transform(&bsdt_in, &bst_in);
   |     ^^^^^^^^^ --------  ------- expected `&BatchSeqModelTensor`, found `&BatchSeqTensor`
   |               |
   |               expected `&BatchSeqTensor`, found `&BatchSeqModelTensor`
   |
note: function defined here
  --> tests/compilation_tests/04_fail_fn_parameters.rs:12:4
   |
12 | fn transform(in1: &BatchSeqTensor, in2: &BatchSeqModelTensor) {
   |    ^^^^^^^^^ --------------------  -------------------------
help: swap these arguments
   |
28 |     transform(&bst_in, &bsdt_in);
   |              ~~~~~~~~~~~~~~~~~~~
